<resources>
    <string name="app_name">Persona</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_qalam_id_to_continue">Enter your Qalam ID to continue</string>
    <string name="enter_id">enter id</string>
    <string name="qalam_id">Qalam ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Syed Fawwad Ahmed</string>
    <string name="nav_header_subtitle">sfahmed.bscs23seecs@seecs.edu.pk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="log_out">Logout</string>
    <string name="complaints">Complaints</string>
    <string name="home">Home</string>
    <string name="shuttle">Shuttle</string>
    <string name="this_is_home_activity">Dashboard</string>
    <string name="today_s_menu">Today\'s\nMenu</string>
    <string name="lodge_a_complaint">Lodge a Complaint</string>
    <string name="file_a_request">File a Request</string>
    <string name="get_e_pass">Get\nE-pass</string>
    <string name="logo_for_menu">Logo for menu</string>
    <string name="logo_for_e_pass">Logo for e-pass</string>
    <string name="logo_for_complaints">logo for complaints</string>
    <string name="logo_for_request">logo for request</string>
    <string name="logo_for_dues">logo for dues</string>
    <string name="dues_and_charges">Dues and Charges</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_in_the_following_details_to_create_an_account">Fill in the following details \nto create an account.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_qalam_id">Qalam ID</string>
    <string name="announcements">Announcements</string>
    <string name="track_shuttles">Track Shuttles</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="payment_history">Payment History</string>
    <string name="got_a_request">Got a request?</string>
    <string name="today_in_the_menu">Today in the menu</string>

    <string-array name="degree_array">
        <item>Select</item>
        <item>Undergraduate</item>
        <item>Postgraduate</item>
    </string-array>

    <string-array name="school_array">
        <item>Select</item>
        <item>SEECS</item>
        <item>SCME</item>
        <item>SMME</item>
        <item>NBS</item>
        <item>S3H</item>
    </string-array>

    <string-array name="department_array">
        <item>Select</item>
        <item>BEE</item>
        <item>BSE</item>
        <item>BSCS</item>
        <item>BSDS</item>
    </string-array>

    <string-array name="semester_array">
        <item>Select</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
        <item>Eighth</item>
    </string-array>
</resources>