<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/background"
    tools:context=".LoginPageActivity">


    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/quicksandsb"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterIdPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksandm"
        android:text="@string/enter_your_qalam_id_to_continue"
        android:textStyle=""
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />

    <TextView
        android:id="@+id/qalamID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksandb"
        android:text="@string/qalam_id"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/enterIdPrompt"/>

    <EditText
        android:id="@+id/enterQalamId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColorHighlight="@color/black"
        android:textCursorDrawable="@null"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/qalamID"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksandb"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/enterQalamId"/>

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/quicksandsb"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:textAllCaps="false"
        style="@style/MyButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="199dp"
        android:layout_height="26dp"
        android:layout_marginStart="260dp"
        android:fontFamily="@font/quicksandsb"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#172A6D"
        android:fontFamily="@font/quicksandsb"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>