<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:launchMode="singleTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/quicksandsb"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/top_notch_blue_background"
        android:text="@string/this_is_home_activity"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/attendanceProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/progress_ring"
                app:layout_constraintBottom_toBottomOf="@id/profileImage"
                app:layout_constraintEnd_toEndOf="@id/profileImage"
                app:layout_constraintStart_toStartOf="@id/profileImage"
                app:layout_constraintTop_toTopOf="@id/profileImage" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/quicksandb"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toTopOf="@id/profileImage" />

            <TextView
                android:id="@+id/studentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toBottomOf="@id/studentName" />

            <TextView
                android:id="@+id/studentQalamId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/quicksandb"
                android:textSize="10dp"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toBottomOf="@id/studentEmail" />

            <TextView
                android:id="@+id/studentSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/quicksandb"
                android:textSize="10dp"
                app:layout_constraintStart_toEndOf="@id/studentQalamId"
                app:layout_constraintTop_toBottomOf="@id/studentEmail" />

            <TextView
                android:id="@+id/studentAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/quicksandb"
                android:textColor="#07D610"
                android:textStyle="bold"
                android:textSize="10dp"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toBottomOf="@id/studentQalamId" />

            <TextView
                android:id="@+id/studentDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="121dp"
                android:fontFamily="@font/quicksandb"
                android:textSize="10dp"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toBottomOf="@id/studentSchool" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksandb"
                android:text="@string/today_s_menu"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="65dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logo_for_menu"
                android:src="@drawable/menuu" />

            <Button
                android:id="@+id/menu_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="114dp"
                android:layout_height="79dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksandb"
                android:text="@string/get_e_pass"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="52dp"
                android:layout_height="49dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="85dp"
                android:contentDescription="@string/logo_for_e_pass"
                android:src="@drawable/e_pass" />

            <Button
                android:id="@+id/e_pass_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksandb"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/lodge_a_complaint"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="65dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logo_for_complaints"
                android:src="@drawable/complain_2" />

            <Button
                android:id="@+id/complaint_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksandb"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/file_a_request"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="47dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="90dp"
                android:contentDescription="@string/logo_for_request"
                android:src="@drawable/request1" />

            <Button
                android:id="@+id/request_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksandb"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/dues_and_charges"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="63dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="85dp"
                android:contentDescription="@string/logo_for_dues"
                android:src="@drawable/dues" />

            <Button
                android:id="@+id/dues_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/bottom_navigation_color"
        app:compatShadowEnabled="false"
        app:itemIconSize="40dp"
        app:itemRippleColor="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemActiveIndicatorStyle="@color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>